deploy/launchpad/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: partner-ai-launchpad
  labels:
    app.kubernetes.io/part-of: partner-ai-launchpad
